{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 19,
  "lineage": "a137836c-2cfb-e6b1-9847-fa9bb1c6126e",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-server",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-05fcfb9614772f051",
            "arn": "arn:aws:ec2:eu-north-1:602682890304:instance/i-0eed4fa5b9ac9b72b",
            "associate_public_ip_address": false,
            "availability_zone": "eu-north-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0eed4fa5b9ac9b72b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "europe-stockholm-ssh-rsa-keygen",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ff232cce918e384c",
            "private_dns": "ip-10-0-2-36.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.36",
            "region": "eu-north-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-001c543fccf8ce37a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04794883604aefb0e",
            "tags": {
              "Name": "private-server"
            },
            "tags_all": {
              "Name": "private-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03021a7986b37261c"
            ]
          },
          "dependencies": [
            "module.ec2_security_group.aws_security_group.private_ec2_security_group",
            "module.ec2_security_group.aws_security_group.public_ec2_security_group",
            "module.subnets.aws_subnet.this",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "public-server",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-05fcfb9614772f051",
            "arn": "arn:aws:ec2:eu-north-1:602682890304:instance/i-06cc9a177d7014d60",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EC2S3AccessRole",
            "id": "i-06cc9a177d7014d60",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "europe-stockholm-ssh-rsa-keygen",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b35e5ef97dd3c294",
            "private_dns": "ip-10-0-1-198.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.198",
            "public_dns": "ec2-13-51-237-94.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.51.237.94",
            "region": "eu-north-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a3f3baadf40a1935",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01cd35bd6eec74803",
            "tags": {
              "Name": "public-server"
            },
            "tags_all": {
              "Name": "public-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00d693700f1191ae6"
            ]
          },
          "dependencies": [
            "module.ec2_security_group.aws_security_group.private_ec2_security_group",
            "module.ec2_security_group.aws_security_group.public_ec2_security_group",
            "module.subnets.aws_subnet.this",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_ec2_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:602682890304:security-group/sg-03021a7986b37261c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03021a7986b37261c",
            "ingress": [],
            "name": "advanced-terraform-private-ec2-security-group",
            "name_prefix": "",
            "owner_id": "602682890304",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-003711a0594047037"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_ec2_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:602682890304:security-group/sg-00d693700f1191ae6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00d693700f1191ae6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "advanced-terraform-public-ec2-security-group",
            "name_prefix": "",
            "owner_id": "602682890304",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-003711a0594047037"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-041f9f193ddce37f4",
            "region": "eu-north-1",
            "route_table_id": "rtb-0faa1af67482faa70",
            "subnet_id": "subnet-01cd35bd6eec74803"
          },
          "dependencies": [
            "module.subnets.aws_subnet.this",
            "module.vpc.aws_internet_gateway.gateway",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:602682890304:subnet/subnet-04794883604aefb0e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04794883604aefb0e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "602682890304",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "vpc_id": "vpc-003711a0594047037"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "public-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:602682890304:subnet/subnet-01cd35bd6eec74803",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01cd35bd6eec74803",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "602682890304",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "vpc_id": "vpc-003711a0594047037"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:602682890304:internet-gateway/igw-0dac3f29edcfd93b5",
            "id": "igw-0dac3f29edcfd93b5",
            "owner_id": "602682890304",
            "region": "eu-north-1",
            "tags": {
              "Name": "advanced-terraform-gateway"
            },
            "tags_all": {
              "Name": "advanced-terraform-gateway"
            },
            "vpc_id": "vpc-003711a0594047037"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:602682890304:route-table/rtb-0faa1af67482faa70",
            "id": "rtb-0faa1af67482faa70",
            "owner_id": "602682890304",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dac3f29edcfd93b5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "advanced-terraform-public-route-table"
            },
            "tags_all": {
              "Name": "advanced-terraform-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-003711a0594047037"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.gateway",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:602682890304:vpc/vpc-003711a0594047037",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-016a3addbd878e6aa",
            "default_route_table_id": "rtb-00ed52d65b0cdd54f",
            "default_security_group_id": "sg-00b4aebc043a1fc8d",
            "dhcp_options_id": "dopt-03c6646ffac814f5b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-003711a0594047037",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00ed52d65b0cdd54f",
            "owner_id": "602682890304",
            "region": "eu-north-1",
            "tags": {
              "Name": "advanced-terraform-vpc"
            },
            "tags_all": {
              "Name": "advanced-terraform-vpc"
            }
          }
        }
      ]
    }
  ]
}